fix post detail page styles in dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
 .content h1 {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     font-weight: bold;
     padding-top: 10px;
     border-bottom: 1px solid rgb(0 0 0 / 12%);
@@ -7,9 +7,17 @@
     padding-left: 18px;
 }
 
+.chakra-ui-dark .content h1 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding-top: 10px;
+    border-bottom: 1px solid #707072;
+    position: relative;
+}
+
 .content h1::before {
     position: absolute;
-    top: 10;
+    top: 15;
     left: 0;
     content: '';
     width: 5px;
@@ -18,14 +26,21 @@
 }
 
 .content h2 {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: bold;
     border-bottom: 1px solid rgb(0 0 0 / 12%);
     padding-top: 8px;
 }
 
-.content h3 {
+.chakra-ui-dark .content h2 {
     font-size: 1.4rem;
+    font-weight: bold;
+    border-bottom: 1px solid #707072;
+    padding-top: 8px;
+}
+
+.content h3 {
+    font-size: 1.3rem;
     font-weight: bold;
     padding-top: 6px;
 }
@@ -38,10 +53,24 @@
 
 .content pre {
     padding: 16px;
-    background-color: #f5f0e8;
+    background-color: #1d2020;
     width: 100%;
     font-size: 14px;
     overflow-x: scroll;
+    border-radius: 8px;
+}
+
+.chakra-ui-dark .content pre {
+    padding: 16px;
+    background-color: #707072;
+    width: 100%;
+    font-size: 14px;
+    overflow-x: scroll;
+    border-radius: 8px;
+}
+
+.content code {
+    color: white;
 }
 
 .content blockquote {
@@ -57,4 +86,8 @@
     width: 4px;
     height: 100%;
     background-color: #cccccc;
+}
+
+.content a {
+    color: #2c7a7b;
 }
